@@ -364,6 +364,7 @@ class BuilderBase:
                         chdir = _null,
                         is_explicit = 1,
                         src_builder = [],
+                        ensure_suffix = False,
                         **overrides):
         if __debug__: logInstanceCreation(self, 'Builder.BuilderBase')
         self._memo = {}
@@ -391,6 +392,7 @@ class BuilderBase:
 
         self.set_suffix(suffix)
         self.set_src_suffix(src_suffix)
+        self.ensure_suffix = ensure_suffix
 
         self.target_factory = target_factory
         self.source_factory = source_factory
@@ -464,7 +466,7 @@ class BuilderBase:
             executor.add_sources(slist)
             return executor
 
-    def _adjustixes(self, files, pre, suf):
+    def _adjustixes(self, files, pre, suf, ensure_suffix=False):
         if not files:
             return []
         result = []
@@ -473,7 +475,7 @@ class BuilderBase:
 
         for f in files:
             if SCons.Util.is_String(f):
-                f = SCons.Util.adjustixes(f, pre, suf)
+                f = SCons.Util.adjustixes(f, pre, suf, ensure_suffix)
             result.append(f)
         return result
 
@@ -502,7 +504,7 @@ class BuilderBase:
                 splitext = lambda S,self=self,env=env: self.splitext(S,env)
                 tlist = [ t_from_s(pre, suf, splitext) ]
         else:
-            target = self._adjustixes(target, pre, suf)
+            target = self._adjustixes(target, pre, suf, self.ensure_suffix)
             tlist = env.arg2nodes(target, target_factory)
 
         if self.emitter:
